--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 @media (min-width: 640px) {
   .bg-mobile-bg {
-    background-image: url('/images/home3.JPG');
+    background-image: url('/images/home1.jpg');
   }
 }
 
